Add build and deployment support for GitHub Pages
The commit adds build tooling and documentation for GitHub Pages
deployment, including:

- Build script for bundling TypeScript and generating video assets -
Video list generation for static file serving - CSS and layout
improvements for video overlays - Updated documentation with deployment
instructions - Static file support for serverless hosting

--- a/deno.json
+++ b/deno.json
@@ -22,6 +22,8 @@
     "test": "deno test",
     "demo": "deno run src/pachislo.ts",
     "serve": "deno run --allow-net --allow-read server.ts",
+    "build": "deno run --allow-read --allow-write --allow-run scripts/build.ts",
+    "generate-videos": "deno run --allow-read --allow-write scripts/generate-video-list.ts",
     "check": "deno check src/pachislo.ts",
     "lint": "deno lint src/",
     "fmt": "deno fmt src/"
